[project]
name = "ai"
version = "0.0.1"
description = "My api of ai powered endpoints."
authors = [
    {name = "Hayri Habip",email = "hayrihabip@hotmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "trafilatura",
    "edge-tts",
    "pyproject-flake8"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.flake8]
extend-ignore = [  
    "E501"
]